--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "firebase": "^5.0.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue2-datepicker": "^1.9.7",
     "vuetify": "^1.0.18",
     "vuex": "^3.0.1"
   },
